<resources>

    <string name="app_name">SGO Mesero</string>

    <string name="loading">Cargando...</string>

    #Activity Login
    <string name="txt_Usuario">Usuario</string>
    <string name="txt_Contraseña">Contraseña</string>
    <string name="btn_Ingresar">Ingresar</string>
    #end Activity Login

    #Activity Seleccion Mesa
    <string name="txt_title">Seleccione la mesa</string>
    <string name="btn_Aceptar">Aceptar</string>
    <string name="btn_Cancelar">Cancelar</string>
    #end Activity Seleccion Mesa

    <string name="txt_cierre_cesion">¿Desea cerrar la cesión?</string>
    <string name="btn_si">SI</string>
    <string name="btn_no">NO</string>

    <string name="txt_title2">Ingresar Datos Factura</string>
    <string name="txt_subtitle">Mesa Nro. 1</string>
    <string name="txt_nombres">Razón Social/Nombres y Apellidos</string>
    <string name="txt_identificacion">Cédula/RUC</string>
    <string name="txt_direccion">Dirección</string>
    <string name="txt_telefono">Teléfono</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_ingorden">Ingresar Orden</string>
    <string name="btn_buscar">Buscar Cliente</string>
    <string name="btn_facturacion">Ingresar Cliente</string>

    <string name="txt_Title">Buscar Cliente</string>
    <string name="txt_ingrcedul">Ingresar Cédula</string>
    <string name="btn_busca">Buscar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="Btn_Consumidor">Consumidor Final</string>


    <string name="txt_title3">Categoria</string>
    <string name="txt_aperitivos">Aperitivos</string>
    <string name="txt_sopas">Sopas</string>
    <string name="txt_plfuertes">Platos Fuertes</string>
    <string name="txt_ensalada">Ensaladas</string>
    <string name="txt_mariscos">Mariscos</string>
    <string name="txt_jugos">Bebidas</string>
    <string name="txt_postres">Postres</string>
    <string name="txt_promociones">Promociones</string>
    <string name="textview">TextView</string>
    <string name="btn_fact">Facturar</string>
    //Activity Verificar Orden
    <string name="txt_title4">Verificar Orden</string>
    <string name="btn_agregar">Agregar Plato</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_finali">Facturar</string>
    <string name="btn_VerCntaDos">Ver Segunda Cuenta</string>
    <string name="btn_DatosFact">Ingresar Datos Facturación</string>
    <string name="txt_cod">Cod</string>
    <string name="txt_descrip">Descripción</string>
    <string name="txt_cant">Nro.</string>
    <string name="txt_Valorunit">PVP</string>
    <string name="txt_Total">Total</string>
    <string name="txt_Res">Resultado</string>

    <string name="txt_title5">Seleccionar Orden</string>

    #Activity seleccionar orden
    <string name="txt_plato">plato</string>
    <string name="btn_mas">+</string>
    <string name="txt_num">0</string>
    <string name="btn_menos">-</string>

    #Cuadro de dialogo Modificar plato
    <string name="Txt_TitleModiicar">Modificar la Cantidad</string>

    #Cuadro de dialogo select plato
    <string name="Txt_TitleOp">Opciones</string>
    <string name="Txt_SPplato">Plato</string>
    <string name="Btn_SPModificar">Modificar Cantidad</string>
    <string name="Btn_SPEliminar">Eliminar Plato</string>
    <string name="Btn_DividirCnta">Añadir a factura</string>

    #Cuadro de dialogo cantidad a facturar
    <string name="Txt_CantFact">Cantidad a facturar</string>

    #Cuadro de dialogo cantidad a facturar
    <string name="Txt_TitleOrdn">Verificar Orden de Cuenta</string>

    #Cuadro de dialogo segunda cuenta
    <string name="Txt_TitleCnta">Seleccionar una Cuenta</string>
    <string name="Txt_OrdnFact">Ordenes Realizadas</string>

</resources>
