<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtview_codigo"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/txt_cod"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtview_descrip"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|center_horizontal"
        android:hint="@string/txt_descrip"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtplain_cant"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/txt_cant"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtview_vunit"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/txt_Valorunit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtview_total"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/txt_Total"
        android:textSize="16sp" />
</TableRow>