<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1F2F2F4"
    tools:context=".ActivityLogin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            tools:text="@string/app_name" />

        <EditText
            android:id="@+id/editTextUsuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_Usuario"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/tertiary_text_dark" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="291dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/txt_Contraseña"
            android:inputType="textPassword"
            android:textColorHint="@android:color/tertiary_text_dark" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Validar"
            android:text="@string/btn_Ingresar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>